@@ -1,5 +1,9 @@
 2014-12-03  Thomas Fitzsimmons  <fitzsim@fitzsim.org>
 
+	* soap-client.el (soap-invoke-async): Fix callback invocation.
+
+2014-12-03  Thomas Fitzsimmons  <fitzsim@fitzsim.org>
+
 	* soap-client.el (soap-invoke-async): New function.
 	(soap-invoke): Reimplement using soap-invoke-async.
 
